src/styles/pages/project_content.sass
@use '../variables' as *
@use "../mixins" as *
@use "../components/global" as *
@use "../components/images" as *
@use "../components/callout" as *


.project-body
	display: flex
	flex-direction: column

// Section for grouping project description
.project-section
	@extend %section__paddings
	h2
		margin-top: 0
		scroll-margin-top: 32px
	&:nth-child(even)
		@extend %section__primary


// =====================
// Контент
// ====================
.project-body
	// Изображения
	img
		display: block
		@extend .img-fluid
		border-radius: $radius--XL
		border: 12px solid rgba($surface-primary--dark-1, 50%)
	// Отступы между соседними картинками
	img + img,
	a + img,
	img + a,
	img + p,
	a + a
		margin-top: 24px

	a[data-fancybox]>img
		transition: all 0.3s
	a[data-fancybox]:hover>img
		border: 12px solid rgba($color__green-bright-100, 60%)

// .project-video
// 	+media-down(md)
// 		position: relative
// 		padding-bottom: 56.25% // 16:9
// 		height: 0
// 	iframe
// 		display: block
// 		+media-down(md)
// 			position: absolute
// 			top: 0
// 			left: 0
// 			width: 100%
// 			height: 100%

// Highlight inline values
.highlightValue
	text-decoration: underline
	text-decoration-thickness: 14px
	text-decoration-skip-ink: none
	text-underline-offset: -9px
	&.--old
		border-color: $surface-primary--dark-3
	&.--bad
		text-decoration-color: rgba($color__yellow-200, 0.2)
	&.--good
		text-decoration-color: rgba($color__green-200, 0.2)



// Impact blocks for a case study
.impactRow
	display: flex
	gap: 8px
	margin-bottom: 16px

.impact
	display: grid
	gap: 8px
	padding: 24px
	border-radius: $radius--M
	outline-offset: -3px
	&__values
		font-family: $font-family--secondary
		font-size: $font-size-xl
		font-weight: 900
		line-height: 1.1
		
		white-space: nowrap

	&.--good
		background: url(../assets/noise-2.png) repeat 0 0 / 50px, linear-gradient(314deg, rgba(255, 255, 255, 0) 90%, $color__green-100 100%);
		
	&.--good &__values
		color: $color__green-300
	&.--good.--main // Main metric
		outline: 3px solid $color__green-200

	&.--bad
		background: url(../assets/noise-2.png) repeat 0 0 / 50px, linear-gradient(314deg, rgba(255, 255, 255, 0) 90%, $color__yellow-100 100%);

	&.--bad &__values
		color: $color__yellow-300
	&.--bad.--main // Main metric
		outline: 3px solid $color__yellow-200

	&__goal, &__name
		font-size: $font-size-sm
		line-height: 1.1


.project-section__highlights
	display: block
	width: 100%
	padding: 24px
	background: $color__blue-100
	border-radius: $radius--M
	font-weight: normal

// External links
.project-body a[href^="https://"],
.project-body a[href^="http://"]
	align-items: center
	gap: 8px
	&:after
		content: ''
		width: 16px
		height: 16px
		display: block
		background-image: url("../assets/external-link.svg")
		background-size: contain

